--- a/building_guitars.html
+++ b/building_guitars.html
@@ -23,6 +23,15 @@
             <h2>Using The Right Parts</h2>
             <p>There are many different types of guitars and so there are many different types of guitar parts, each can drastically change the sound of your guitar so picking the right parts is important. Luckily, there are stores like this <a target="_blank" href="https://thundercloudmusic.co.za/collections/all/guitar-parts-and-spares">one</a> that do a great job at helping you get the right equipment.
             </p>
+            <h2>A list of guitar parts</h2>
+            <ul>
+                <li>Headstock</li>
+                <li>Tuning Machines</li>
+                <li>Nut</li>
+                <li>Neck</li>
+                <li>Frets</li>
+                <li>Body</li>
+            </ul>
         </div>
     </div>
 </body>
